samples/_failures_safe/1761614395_f17d29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_99087c8a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_99087c8a.c:163:16: error: expected ‘;’ at end of input
  163 |             pos
      |                ^
      |                ;
./samples/SAFE/__tmp_99087c8a.c:163:13: error: expected declaration or statement at end of input
  163 |             pos
      |             ^~~
./samples/SAFE/__tmp_99087c8a.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_99087c8a.c:163:13: error: expected declaration or statement at end of input
